# DEMO_FastAPI

./: .env.docker  .env.docker.dev  .env.docker.dev.example  .env.docker.prod.example  .env.example  .gitignore  .lycheeignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REFACTORING_NOTES.md  docker-compose.yml  environment.yml  firewall-rules.sh  main.py  mypy.ini  project_spec.sh  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.github/: .cspell.json  .markdownlint.json  copilot-instructions.md  dependabot.yml
.github/golden-prompts/: README.md  adversarial-ambiguous.scenario.md  data-engineering.scenario.md  data-validation.scenario.md  eda-analysis.scenario.md  environments-config.scenario.md  experiment-tracking.scenario.md  mlops-pipeline.scenario.md  observability.scenario.md  report-template.md
.github/instructions/: TEMPLATE.instructions.md  auth-security.instructions.md  data-engineering.instructions.md  data-validation.instructions.md  eda.instructions.md  environments.instructions.md  experiment-tracking.instructions.md  fastapi-api.instructions.md  ml-inference.instructions.md  ml-training.instructions.md  mlops-pipelines.instructions.md  observability.instructions.md  project-structure.instructions.md  readme-structure.instructions.md
.github/prompts/: code-review.prompt.md  write-tests.prompt.md
.github/workflows/: ci-full.yml  ci-light.yml  reusable-repo-quality.yml  reusable-service-ci.yml
app/: Dockerfile  dependencies.py  main.py
app/api/v1/endpoints/: alerts.py  auth.py  expenses.py  health.py  reports.py  users.py
app/branding/: completion.txt  startup.txt
app/core/: branding.py  config.py  enums.py  logging.py  middleware.py  security.py
app/database/: session.py
app/database/models/: expense.py  user.py
app/models/: expense.py  user.py
app/routers/: alerts.py  auth.py  expenses.py  health.py  reports.py  users.py
app/schemas/: common.py  expense.py  user.py
app/services/: alert_service.py  auth_service.py  expense_service.py  user_service.py
app/utils/: dependencies.py  print_banner.py
app/utils/branding/: completion.txt  setup.txt  startup.txt
config/: alert.rules.yml  logging.yaml  prometheus.yml
doc/: DEPLOYMENT.md  DEVELOPMENT.md  RATE_LIMITING.md  SETUP.md  STANDARDS.md
docs/: DEVELOPMENT.md  RATE_LIMITING.md  STANDARDS.md
logs/config/: logging.yaml
nginx/: nginx.conf
scripts/: README.md  project_spec.sh  setup.sh
services/api/: Dockerfile  README.md  alembic.ini  initial_data.py  main.py  prestart.py  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260424_01_uuid_schema_and_enums.py
services/api/auth/: __init__.py  router.py  schemas.py  service.py
services/api/core/: branding.py  cache.py  config.py  logging.py  metrics.py  middleware.py  security.py
services/api/database/: base.py  session.py
services/api/database/models/: __init__.py  expense.py  user.py
services/api/logs/config/: logging.yaml
services/api/routers/: alerts.py  analytics.py  auth.py  expenses.py  reports.py  users.py
services/api/schemas/: common.py  expense.py  user.py
services/api/services/: __init__.py  alert_service.py  analytics_service.py  auth_service.py  expense_service.py  report_service.py  user_service.py
services/api/tests/: conftest.py  test_alerts.py  test_auth.py  test_contract.py  test_expenses.py  test_main.py  test_reports.py  test_security.py  test_users.py
services/api/tests/load_tests/: locustfile.py
services/api/utils/: dependencies.py  pagination.py  print_banner.py
services/api/utils/branding/: mammoth.txt
services/app/: Dockerfile  main.py
services/app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  security.py
services/app/database/models/: expense.py  user.py
services/app/routers/: alerts.py  auth.py  expenses.py  health.py  reports.py  users.py
services/app/services/: alert_service.py  auth_service.py  expense_service.py  report_service.py  user_service.py
services/app/tests/: __init__.py  conftest.py  test_alerts.py  test_auth.py  test_expenses.py  test_reports.py  test_security.py  test_users.py
services/app/utils/branding/: completion.txt
services/monitoring/grafana/provisioning/dashboards/: dashboard-provider.yml  fastapi-overview.json  infrastructure.json  rate-limiting.json
src/: auth_manager.py  config.py  password_manager.py  schemas.py
src/database/: models.py
src/routes/: alert.py  expense.py  health.py  report.py  token.py  user.py
startup/: firewall-rules.sh  project_spec.sh  setup.sh
tests/: README.md  conftest.py  test_auth.py  test_expenses.py  test_users.py
