# ============================================================================
# Project metadata and runtime dependencies
# ============================================================================

[project]
name = "demo-fastapi"
version = "1.0.0"
description = "Personal Expense Tracking API"
readme = "README.md"
requires-python = ">=3.13"

# Runtime dependencies required to start and run the API.
dependencies = [
    # Web/API stack
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "python-multipart>=0.0.9,<1.0",

    # Validation and settings
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",

    # Database and caching
    "sqlalchemy>=2.0,<3.0",
    "redis>=5.0,<6.0",
    "fastapi-cache2[redis]>=0.1.8",

    # Security/authentication
    "PyJWT>=2.10,<3.0",
    "passlib[argon2]>=1.7.4,<2.0",
    "argon2-cffi>=23.1,<26.0",

    # Infra and middleware
    "PyYAML>=6.0,<7.0",
    "slowapi>=0.1.9,<2.0",
]

# Optional dependency set for local development and CI checks.
[project.optional-dependencies]
dev = [
    # Tooling and quality gates
    "pre-commit>=3.5,<4.0",
    "ruff>=0.3,<1.0",
    "mypy>=1.8,<2.0",
    "pydocstyle>=6.3,<7.0",
    "autoflake>=2.0,<3.0",

    # Testing
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.25,<1.0",

    # Security
    "bandit>=1.7,<2.0",
    "pip-audit>=2.6,<3.0",

    # Type stubs
    "types-PyYAML>=6.0,<7.0",
    "types-redis>=4.6,<5.0",
]

# ============================================================================
# uv behavior
# ============================================================================

[tool.uv]
# This repository is an app/service, not a publishable Python package.
package = false

[tool.uv.pip]
# Enforce strict dependency resolution semantics.
strict = true

# Additional dev-only tools managed via uv dependency groups.
[dependency-groups]
dev = [
    "locust>=2.43.3",
    "schemathesis>=4.10.2",
]

# ============================================================================
# mypy configuration
# ============================================================================

[tool.mypy]
python_version = "3.14"
check_untyped_defs = false
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
warn_redundant_casts = false
warn_unused_configs = false

[[tool.mypy.overrides]]
module = ["services.api.*"]
ignore_errors = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

# ============================================================================
# pytest configuration (migrated from pytest.ini)
# ============================================================================

[tool.pytest.ini_options]
pythonpath = ["services"]
minversion = "7.0"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["services/api/tests"]

# Default command-line behavior for local and CI runs.
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "-ra",
]

# Documented marker taxonomy to keep test selection explicit.
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for multi-component interactions",
    "slow: Slow running tests",
    "auth: Authentication related tests",
    "users: User management tests",
    "expenses: Expense management tests",
    "alerts: Budget alert tests",
    "reports: Reporting tests",
    "admin: Admin-only operation tests",
]

# ============================================================================
# coverage.py configuration
# ============================================================================

[tool.coverage.run]
source = ["services/api"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
precision = 2
